cambios en clientes y proveedores
